add users get endpoint
